<?xml version="1.0" encoding="UTF-8"?>
<!--
To build, you need to have Maven 2 installed.

To compile, run:
	mvn compile

To run tests, run:
	mvn test

To run one particular test, e.g. serp.bytecode.TestBCClass, run:
	mvn test -Dtest=TestBCClass

To build the jars, run:
	mvn package

To create and upload a release, run:
	mvn deploy

To build the site and upload it, run:
	mvn site:deploy

To perform a complete release, run:
	mvn clean compile package assembly:assembly deploy site site:deploy

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
    http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sourceforge.serp</groupId>
	<artifactId>serp</artifactId>
	<packaging>jar</packaging>
	<name>Serp</name>
	<version>1.16.0</version>
	<description>Serp is an open source framework for manipulating Java bytecode.</description>
	<url>http://serp.sourceforge.net</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>
	
	<issueManagement>
		<system>sourceforge</system>
		<url>http://sourceforge.net/tracker/?group_id=31479&amp;atid=402282</url>
	</issueManagement>
	<inceptionYear>2002</inceptionYear>
	<developers>
		<developer>
			<id>abewhite</id>
			<name>Abe White</name>
			<email>awhite@bea.com</email>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Marc Prud'hommeaux</name>
			<email>mwp1@cornell.edu</email>
		</contributor>
	</contributors>
	<licenses>
		<license>
			<name>BSD</name>
			<url>LICENSE.txt</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:cvs:pserver:anonymous@serp.cvs.sourceforge.net:/cvsroot/serp:serp/serp</connection>
		<developerConnection>scm:cvs:ext:${maven.username}@serp.cvs.sourceforge.net:/cvsroot/serp:serp/serp</developerConnection>
		<url>http://serp.cvs.sourceforge.net/serp/serp</url>
	</scm>
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
          		<artifactId>maven-compiler-plugin</artifactId>
          		<version>3.8.1</version>
          		<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<stagingDirectory>../site-staging</stagingDirectory>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorId>bin</descriptorId>
					<finalName>serp-${project.version}</finalName>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>serp</id>
			<url>http://serp.sourceforge.net/m2repo</url>
		</repository>
	</repositories>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jxr-maven-plugin</artifactId>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<aggregate>true</aggregate>
					<linksource>true</linksource>
					<links>
						<link>http://java.sun.com/j2se/1.5.0/docs/api</link>
					</links>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-pmd-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>surefire-report-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
	<distributionManagement>
		<!-- needs userid,project@shell.sourceforge.net login -->
		<repository>
			<id>serp</id>
			<!-- <url>scp://shell.sourceforge.net/home/groups/s/se/serp/htdocs/m2repo</url> -->
			<url>scp://shell.sourceforge.net/home/project-web/serp/htdocs/m2repo</url>
		</repository>
		<site>
			<id>serp</id>
			<name>serp</name>
			<!-- <url>scpexe://shell.sourceforge.net/home/groups/s/se/serp/htdocs/site/</url> -->
			<url>scpexe://shell.sourceforge.net/home/project-web/serp/htdocs/site/</url>
		</site>
	</distributionManagement>
</project>
